# MagicStateMachines

./: .gitignore  Cargo.toml  README.md  devel.nix  flake.nix
src/: contract.rs  decomposed.rs  kind.rs  lib.rs  marker.rs  policy.rs  shared.rs  state.rs  state_trait.rs  tests.rs  tracing.rs  union.rs  util.rs
src/macros/: mod.rs  state_machine_definition.rs  state_machine_impl.rs  state_union.rs  state_union_enum.rs  state_union_impl.rs  states.rs  transition.rs
src/proof/: bind.rs  concrete.rs  mod.rs  receiver.rs  target.rs  transition.rs  union.rs
src/shared/: guard.rs  mod.rs  storage.rs
src/shared/weak/: mod.rs
src/state/: mod.rs  owned.rs
src/state/storage/: mod.rs  owned.rs
test_def/: Cargo.toml
test_def/src/: lib.rs
test_use/: Cargo.toml
test_use/src/: connectable.rs  connection.rs  connection_async.rs  connection_async_usage.rs  custom_backend.rs  job.rs  main.rs  owned.rs
