[package]
name = "statemachines"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Zero-overhead typestate wrappers for compiler-enforced state machines"

[features]
default = []
tracing = []

[workspace]
members = ["test_def", "test_use"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
dynzst = { git = "https://github.com/sirati/DynZSTBox.rs", rev = "0d982f22e063f43000b99fc6f98d0819d5441044" }
statemachines = { path = "." }
test_def = { path = "test_def" }

[dependencies]
dynzst.workspace = true
paste = "1.0.15"

[lib]
path = "src/lib.rs"
